2004-12-08  Andras Varga

	* omnetapp.cc/h, cenvir.cc: added ev.getParameterUseDefault() function.
	New ini file option:
	  <paramname>.use-default = yes
	If set, the given module parameter(s) will use the defaults specified
	in the NED file via the input() operator.

2004-11-29  Andras Varga

  	* on Mac OS/X, implement ftime() with gettimeofday() [patch from 
  	Michael Tuexen]

  	* platdep.cc: load-libs= omnetpp.ini option now adds plaform-specific
  	extension (.dll or .so) to library name

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-10-31  Andras Varga

	* omnetapp.cc: RNG mapping implemented. New ini file entries:
	  [General]
	  <modulepath>.rng-N=M  (where N,M are numeric, M<num-rngs)
	This maps module-local RNG N to physical RNG M. The following
	example maps all "gen" module's default (N=0) RNG to physical RNG 1,
	and all "noisychannel" module's default (N=0) RNG to physical RNG 2. 
	  [General]
	  num-rngs=3
	  **.gen[*].rng-0=1
	  **.noisychannel[*].rng-0=2
	This mapping allows variance reduction techniques to be applied to
	OMNeT++ models, without any model change or recompilation.

	* cinifile.cc/h, patmatch.cc/h: added stuff needed for RNG mapping:
	getEntriesWithPrefix(), patternPrefixMatches()

2004-10-28  Andras Varga

	* added cakaroarng.h/cc. Akaroa's RNG has some limitations, see class
	doc for details.

2004-10-27  Andras Varga

	* omnetapp.h/cc, cenvir.cc: added numRNGs(), rng(k) functions (see 
	include/ChangeLog)

	* omnetapp.cc: new omnetpp.ini entries:
	  [General]
	  num-rngs=n  (default:1)
	  rng-class="classname"  (default:cMersenneTwister)
	classes accepted: "cMersenneTwister", "cLCG32"
	per-run settings:
	  [General] or [Run n]
	  seed-N-mt=seedvalue  (for MT; default: auto seed selection)
	  seed-N-lcg32=seedvalue  (for cLCG32; default: auto seed selection)
	N can be 0..num-rngs; see sim/cmersennetwister.cc and clcg32.cc for
	exact auto-seeding procedure
