@@ -1,3 +1,7 @@
+2004-12-10  Andras Varga
+
+	* omnetapp.cc/.h: implemented getUniqueNumber()
+
 2004-12-08  Andras Varga
 
 	* omnetapp.cc/h, cenvir.cc: added ev.getParameterUseDefault() function.
